# tradier-ws.rs

./: .gitignore  306245dd-b82d-4d8d-bcc5-7c58e87cdd15.json  8f92e76f-1e0e-4478-8580-16a6ffcfaef5.json  Cargo.toml  README.md  Untitled.ipynb  all_mini.csv  c7e5e8d8-7586-4907-b3ce-16b00c21ca92.json  e39ed23a-7bd1-4587-b060-71988d9ef483.json  e39ed23a-7bd1-4587-b060-71988d9ef483ls.json  ff772164-8238-4b50-93c1-8f9900a7599a.json  orderbook.json  orderbook_file.csv  positions.csv
0047ddc1-f81a-4c48-b964-efdcbc6f2f97/: 1672964085.json
00912bcd-cd94-4c4d-89f2-93a290ca78c2/: 1672964124.json
014d61a3-9dc9-489d-bee5-97f7ed0b24ba/: 1672963993.json
014df07b-ead0-4522-9366-c9a84bb18c9a/: 1672964115.json
01e5dc58-7d07-4e20-921e-3ded2121cf2d/: 1672960714.json  1672960902.json  1672963141.json  1672963217.json  1672963293.json  1672963460.json  1672963619.json  1672963668.json  1672963892.json
0223435e-a257-4bf4-9555-1aa0239ef806/: 1672960715.json  1672960903.json  1672963142.json  1672963219.json  1672963295.json  1672963463.json  1672963670.json  1672963895.json
024d9f18-182c-463d-9573-2718b19dfea9/: 1672964204.json
02e088ad-77ca-4aab-8b49-13be20350870/: 1672963975.json
031a19ba-ec04-4ce4-ab02-2f5b2ca29280/: 1672964028.json
038dfd49-52a2-44ac-b767-31f64c1fffb5/: 1672964103.json
03c6f332-f040-497c-974f-d2995a51da34/: 1672964099.json
03ca097b-aed1-47cc-8c8a-073e11491933/: 1672964129.json
04b8a0a5-d480-4d1f-a128-026673c7aaa6/: 1672964049.json
06047212-1ea0-4086-bd52-4b28dc68188e/: 1672964205.json
061eb042-f907-4e9b-a37c-4e4eb0e8bc02/: 1672964021.json
(+7540 files in other folders)
