[package]
name = "MarketData"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.25"
hyper = "0.14.23"
redis = "0.22.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
substring = "1.4.5"
clap_lex = { version = "0.3.0" }
libc = "0.2.137"
tokio = { version = "1.22.0", features = ["full", "rt-multi-thread", "macros"] }
tungstenite = { version = "0.17.3", features = ["native-tls"] }
url = "2.3.1"
watchexec-cli = "1.20.6"
websocket = "0.26.5"
hyper-tungstenite = "0.8.2"
warp = "0.3.3"
chrono = "0.4.23"
quantlib = "0.1.0"
polars = "0.25.1"
postgres = "0.19.4"
serde_with = "2.1.0"
